# blog_rust

./: .gitignore  Cargo.toml  service.sh  view_logs.sh
auth-service/: Cargo.toml  application.yaml
auth-service/src/: application.rs  application.yaml  main.rs
auth-service/src/config/: application.rs
auth-service/src/domain/request/: login.rs
auth-service/src/domain/response/: login.rs
auth-service/src/grpc/: user_client.rs
auth-service/src/routes/: login_router.rs  mod.rs  test_router.rs
auth-service/src/services/: login_service.rs
auth-service/src/startup/: app_state.rs  builder.rs  server.rs
common/common-core/: Cargo.toml
common/common-core/src/: application.rs  error.rs  lib.rs
common/common-core/src/domain/: page.rs
common/common-core/src/utils/: jwt_utils.rs
common/common-proto/: Cargo.toml  build.rs
common/common-proto/proto/: user.proto
common/common-redis/: Cargo.toml
common/common-redis/src/: application.rs  lib.rs
common/common-tracing/: Cargo.toml
common/common-tracing/src/: application.rs  lib.rs
common/common-web/: Cargo.toml
common/common-web/src/: application.rs
common/common-web/src/domain/: r.rs
common/common-web/src/error/: app_error.rs  error.rs  mod.rs
common/common-web3/: Cargo.toml
common/common-web3/src/: chain.rs  lib.rs
common/common-web3/src/evm/: crypto.rs
gateway-service/: Cargo.toml  application.yaml  test_cors.sh  test_full_flow.sh  test_gateway.sh
gateway-service/src/: application.yaml  main.rs
gateway-service/src/config/: application.rs
gateway-service/src/middleware/: auth.rs  circuit_breaker.rs  mod.rs  rate_limit.rs  tracing.rs
gateway-service/src/proxy/: mod.rs
gateway-service/src/startup/: app_state.rs  builder.rs  mod.rs  server.rs
modules/article-service/: Cargo.toml  application.yaml
modules/article-service/src/: main.rs
modules/article-service/src/config/: application.rs
modules/article-service/src/domain/: mod.rs
modules/article-service/src/domain/bo/: article_bo.rs  authorship_bo.rs  mod.rs
modules/article-service/src/domain/model/: article.rs  authorship.rs
modules/article-service/src/domain/request/: article.rs
modules/article-service/src/domain/response/: article.rs  authorship.rs  mod.rs
modules/article-service/src/grpc/: mod.rs  user_client.rs
modules/article-service/src/repository/: article_repository.rs  authorship_repository.rs  mod.rs
modules/article-service/src/routes/: article_route.rs  authorship_route.rs  mod.rs
modules/article-service/src/services/: article_service.rs  authorship_service.rs  mod.rs
modules/article-service/src/startup/: app_state.rs  builder.rs  server.rs
modules/article-service/src/utils/: transaction.rs
modules/demo-service/: application.yaml
modules/demo-service/src/config/: application.rs
modules/demo-service/src/grpc/: user_client.rs
modules/demo-service/src/startup/: builder.rs  server.rs
modules/user-service/: Cargo.toml  DATABASE.md  INTEGRATION_SUMMARY.md  YAML_CONFIG.md  application.yaml
modules/user-service/examples/: test_config.rs
modules/user-service/migrations/: 001_init_users.sql
modules/user-service/src/: application.yaml  main.rs
modules/user-service/src/config/: application.rs
modules/user-service/src/domain/: mod.rs
modules/user-service/src/domain/bo/: mod.rs  user_bo.rs
modules/user-service/src/domain/model/: user.rs
modules/user-service/src/domain/response/: user.rs
modules/user-service/src/error/: error.rs
modules/user-service/src/grpc/: mod.rs  user_grpc_service.rs
modules/user-service/src/repository/: mod.rs  user_repository.rs  web3_user_info_repository.rs
modules/user-service/src/routes/: user_router.rs
modules/user-service/src/services/: user_service.rs
modules/user-service/src/startup/: app_state.rs  builder.rs  mod.rs  server.rs
sql/: articles.sql  users.sql  web3_user_info.sql
