[workspace]
resolver = "2"
members = [
    "common/common-redis",
]

[workspace.dependencies]
# 核心框架
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.14.2"
prost = "0.14.1"

# 数据库与工具
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tonic-build = "0.14.2"
bb8 = "0.9"
redis = { version = "1", default-features = false, features = ["tokio-comp", "bb8"] }

