[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common-core.workspace = true
common-redis.workspace = true
common-web.workspace = true
common-web3.workspace = true

axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
async-trait.workspace = true
anyhow.workspace = true
rs-snowflake.workspace = true
