[package]
name = "gateway-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common-core.workspace = true
common-web.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "cors", "timeout"] }
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true

jsonwebtoken.workspace = true
governor.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

anyhow.workspace = true
